<resources>
    <string name="app_name">Ya All Doomed</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">SNS</string>
    <string name="nav_header_subtitle" translatable="false">953956895@qq.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Setting</string>
    <string name="btn_label">temperature</string>
    <string name="score_label">0</string>
    <string name="lable_three1" translatable="false">+3 POINTS</string>
    <string name="lable_two1" translatable="false">+2 POINTS</string>
    <string name="lable_one1" translatable="false">+1 POINT</string>
    <string name="rmbInput">Please input RMB</string>
    <string name="btn_dollar_label" translatable="false">DOLLAR</string>
    <string name="btn_euro_label" translatable="false">EURO</string>
    <string name="btn_yen_label" translatable="false">YEN</string>
    <string name="btn_user_define" translatable="false">User Define</string>
    <string name="btn_save_label" translatable="false">SAVE</string>
    <string name="menu_set_label" translatable="false">Settings</string>
    <string name="menu_set_label2" translatable="false">Score</string>
    <string name="label_open_list" translatable="false">OpenList</string>
    <string name="rdo_home_label" translatable="false">首页</string>
    <string name="rdo_func_label" translatable="false">功能</string>
    <string name="rdo_setting_label" translatable="false">设置</string>
</resources>
